[gd_scene load_steps=6 format=3 uid="uid://sfi4by3jiv4e"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_31pah"]
[ext_resource type="PackedScene" uid="uid://rbarsuai6xgt" path="res://scenes/xp_orb.tscn" id="2_hsh1b"]
[ext_resource type="Texture2D" uid="uid://eyvb8xm0od6g" path="res://assets/gnome.png" id="2_q40kx"]
[ext_resource type="Texture2D" uid="uid://dltci8ct63hqt" path="res://assets/Bang.png" id="3_vvcd3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2y2u"]
size = Vector2(142, 313)

[node name="enemy" type="Area2D" groups=["enemy"]]
collision_layer = 2
script = ExtResource("1_31pah")
xp_scene = ExtResource("2_hsh1b")

[node name="Tralalero" type="Sprite2D" parent="."]
position = Vector2(0.499996, -3.8147e-06)
scale = Vector2(2.38281, 2.4375)
texture = ExtResource("2_q40kx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_b2y2u")

[node name="Bang" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_vvcd3")

[node name="DeathTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
